--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="headerContainer">
       <div class="logo">
-        <img src="./assets/image.png" alt="Logo Brother Garage">
+        <img src="./assets/logoBrotherGarage.jpg" alt="Logo Brother Garage">
         <a id="logoImage" href="#home">Brother Garage</a>
 
       </div>
@@ -25,6 +25,8 @@
       </nav>
     </div>
   </header>
+
+
 
   <!-- Seção Inicial -->
   <section id="home">
@@ -48,16 +50,16 @@
     <h2>Nossos Serviços</h2>
     <div class="services-container">
       <div class="service-item">
-        <h3>Troca de Óleo</h3>
-        <p>Serviço rápido, seguro e eficiente.</p>
+        <h3>Suspensão</h3>
+        <p></p>
       </div>
       <div class="service-item">
-        <h3>Manutenção Completa</h3>
-        <p>Verificação total para garantir a segurança do seu carro.</p>
+        <h3>Rolamentos</h3>
+        <p></p>
       </div>
       <div class="service-item">
-        <h3>Balanceamento</h3>
-        <p>Melhorando a estabilidade e o desempenho do seu veículo.</p>
+        <h3>Freios</h3>
+        <p></p>
       </div>
     </div>
   </section>
