--- a/index.html
+++ b/index.html
@@ -5,28 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brother Garage</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/index.css">
-  <script src="script.js"></script>
-</head>
-<body>
+  <link rel="stylesheet" href="styles/index.min.css">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+
+<body>
   <!-- Cabeçalho -->
   <header>
     <div class="headerContainer">
       <div class="logo">
-        <img src="./assets/logoBrotherGarage.jpg" alt="Logo Brother Garage">
+        <img src="./assets/logoBrotherGarage.jpg" alt="Logo Brother Garage" loading="lazy">
         <a id="logoImage" href="#home">Brother Garage</a>
-
       </div>
       <nav>
-        <a href="#about">Quem Somos</a>
-        <a href="#services">Serviços</a>
-        <a href="#contact">Contato</a>
+        <button id="menu-toggle" aria-label="Abrir menu">☰</button>
+        <div id="menu">
+          <a href="#about">Quem Somos</a>
+          <a href="#services">Serviços</a>
+          <a href="#testimonials">Testemunhos</a>
+          <a href="#contact">Contato</a>
+          <a href="#location">Onde Estamos</a>
+        </div>
       </nav>
     </div>
   </header>
-
-
 
   <!-- Seção Inicial -->
   <section id="home">
@@ -40,9 +43,10 @@
   <!-- Seção Quem Somos -->
   <section id="about">
     <h2>Quem Somos</h2>
-    <p>
-      Na Brother Garage, somos apaixonados por carros e comprometidos com a excelência em cada serviço que oferecemos. Nossa equipe altamente qualificada está pronta para cuidar do seu veículo.
-    </p>
+    <div class="about-content">
+      <i class="fas fa-users fa-4x" style="color: #e63946;"></i>
+      <p>Na Brother Garage, somos apaixonados por carros e comprometidos com a excelência em cada serviço que oferecemos. Nossa equipe altamente qualificada está pronta para cuidar do seu veículo.</p>
+    </div>
   </section>
 
   <!-- Seção Serviços -->
@@ -50,63 +54,118 @@
     <h2>Nossos Serviços</h2>
     <div class="services-container">
       <div class="service-item">
+        <i class="fas fa-car-side fa-3x" style="color: #e63946;"></i>
         <h3>Suspensão</h3>
-        <p></p>
+        <p>Realizamos manutenção e reparo de sistemas de suspensão para garantir conforto e segurança.</p>
       </div>
       <div class="service-item">
+        <i class="fas fa-cogs fa-3x" style="color: #e63946;"></i>
         <h3>Rolamentos</h3>
-        <p></p>
+        <p>Substituição e manutenção de rolamentos para um desempenho suave e seguro.</p>
       </div>
       <div class="service-item">
+        <i class="fas fa-tachometer-alt fa-3x" style="color: #e63946;"></i>
         <h3>Freios</h3>
-        <p></p>
+        <p>Serviços de reparo e manutenção de freios para garantir sua segurança na estrada.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Seção Testemunhos -->
+  <section id="testimonials">
+    <h2>O que nossos clientes dizem</h2>
+    <div class="testimonials-container">
+      <div class="testimonial">
+        <img src="./assets/imgg4.jpg" alt="Cliente João Silva" loading="lazy">
+        <h3>Chappell Roan</h3>
+        <div class="rating">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </div>
+        <p>"Excelente serviço! Minha suspensão estava com problemas e resolveram rapidamente. Recomendo!"</p>
+
+      </div>
+      <div class="testimonial">
+        <img src="./assets/imgg1.jpg" alt="Cliente Maria Oliveira" loading="lazy">
+        <h3>Sabrina Carpinter</h3>
+        <div class="rating">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </div>
+        <p>"Atendimento de primeira qualidade. Meu carro está como novo depois da manutenção dos freios."</p>
+
+      </div>
+      <div class="testimonial">
+        <img src="./assets/img3.jpg" alt="Cliente Pedro Santos" loading="lazy">
+        <h3>Olivia Rodrigo</h3>
+        <div class="rating">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </div>
+        <p>"Profissionais competentes e honestos. Fizeram um ótimo trabalho nos rolamentos do meu carro."</p>
+
       </div>
     </div>
   </section>
 
   <!-- Seção Contato -->
-<section id="contact">
-  <h2>Entre em Contato</h2>
-  <p>Fale conosco para tirar dúvidas ou agendar seu serviço!</p>
-  <form id="contact-form">
-    <div class="form-group">
-      <label for="name">Nome</label>
-      <input type="text" id="name" placeholder="Digite seu nome" required>
-    </div>
-    <div class="form-group">
-      <label for="email">E-mail</label>
-      <input type="email" id="email" placeholder="Digite seu e-mail" required>
-    </div>
-    <div class="form-group">
-      <label for="phone">Telefone</label>
-      <input type="tel" id="phone" placeholder="Digite seu telefone">
-    </div>
-    <div class="form-group">
-      <label for="message">Mensagem</label>
-      <textarea id="message" placeholder="Digite sua mensagem" rows="5" required style="resize: vertical;" ></textarea>
-    </div>
-    <button type="submit" class="btn">Enviar Mensagem</button>
-  </form>
-</section>
+  <section id="contact">
+    <h2>Entre em Contato</h2>
+    <p>Fale conosco para tirar dúvidas ou agendar seu serviço!</p>
+    <form id="contact-form">
+      <div class="form-group">
+        <label for="name">Nome</label>
+        <input type="text" id="name" placeholder="Digite seu nome" required>
+      </div>
+      <div class="form-group">
+        <label for="email">E-mail</label>
+        <input type="email" id="email" placeholder="Digite seu e-mail" required>
+      </div>
+      <div class="form-group">
+        <label for="phone">Telefone</label>
+        <input type="tel" id="phone" placeholder="Digite seu telefone">
+      </div>
+      <div class="form-group">
+        <label for="message">Mensagem</label>
+        <textarea id="message" placeholder="Digite sua mensagem" rows="5" required style="resize: vertical;"></textarea>
+      </div>
+      <button type="submit" class="btn">Enviar Mensagem</button>
+    </form>
+  </section>
 
-<!-- Seção Localização -->
-<section id="location">
-  <h2>Onde Estamos</h2>
-  <p>Visite nossa oficina e cuide bem do seu carro!</p>
-  
-  <!-- Mapa do Google Maps -->
-  <div class="map-container">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1877369.2692724883!2d-46.43209515255722!3d-23.216258690705672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997d88bd7cc9a9%3A0xc4b5755556176dfc!2sBrother%20Garage%20Auto%20Mec%C3%A2nica!5e0!3m2!1spt-BR!2sbr!4v1733253159705!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
-</section>
-
-
-  
+  <!-- Seção Localização -->
+  <section id="location">
+    <h2>Onde Estamos</h2>
+    <p>Visite nossa oficina e cuide bem do seu carro!</p>
+    <div class="map-container">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1877369.2692724883!2d-46.43209515255722!3d-23.216258690705672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997d88bd7cc9a9%3A0xc4b5755556176dfc!2sBrother%20Garage%20Auto%20Mecânica!5e0!3m2!1spt-BR!2sbr!4v1733253159705!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <a href="https://maps.google.com/?q=Brother+Garage" target="_blank" class="btn">Como chegar</a>
+  </section>
 
   <!-- Rodapé -->
   <footer>
     <p>© 2024 Brother Garage - Todos os direitos reservados.</p>
+    <div class="social-links">
+      <a href="https://instagram.com/brothergarageiraja" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://wa.me/5521964152802" target="_blank" aria-label="WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+      </a>
+    </div>
   </footer>
 
-</body>
-</html>
+  <script src="script.min.js"></script>
