--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="team-container">
       <div class="team-member">
-        <img src="./assets/rodrigo.jpg" alt="Emerson" loading="lazy">
+        <img src="#" alt="Emerson" loading="lazy">
         <h3>Emerson</h3>
       </div>
       <div class="team-member">
