--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Brother Garage - Serviços de mecânica automotiva de alta qualidade.">
+  <meta name="description" content="Brothers Garage - Serviços de mecânica automotiva de alta qualidade.">
   <meta name="keywords" content="mecânica, serviços automotivos, manutenção de carros, Brother Garage">
   <link rel="canonical" href="https://www.seusite.com/">
-  <title>Brother Garage Irajá</title>
+  <title>Brothers Garage Irajá</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="icon" type="image/png" href="./assets/logoBrotherGarage.jpg">
@@ -19,7 +19,7 @@
     <div class="headerContainer">
       <div class="logo">
         <img src="./assets/logoBrotherGarage.jpg" alt="Logo Brother Garage" loading="lazy">
-        <a id="logoImage" href="#home">Brother Garage</a>
+        <a id="logoImage" href="#home">Brothers Garage</a>
       </div>
       <nav>
         <button id="menu-toggle" aria-label="Abrir menu">☰</button>
@@ -38,7 +38,7 @@
     <div class="home-content">
       <h1>
         <span class="welcome-text">Bem-vindo à</span> 
-        <span class="brand-name">Brother Garage</span>
+        <span class="brand-name">Brothers Garage</span>
       </h1>
       <p>Seu carro em boas mãos. Oferecemos o melhor para o seu veículo!</p>
       <a href="#services" class="btn">Conheça nossos serviços</a>
@@ -52,7 +52,7 @@
     </div>
     <div class="team-container">
       <div class="team-member">
-        <img src="#" alt="Emerson" loading="lazy">
+        <img src="assets/emerson.jpg" alt="Emerson" loading="lazy">
         <h3>Emerson</h3>
       </div>
       <div class="team-member">
